--- a/package.json
+++ b/package.json
@@ -13,17 +13,17 @@
     "@prisma/client": "^2.16.1",
     "apollo-server": "^2.21.0",
     "deepmerge": "^4.2.2",
-    "dotenv": "^8.2.0",
     "esm": "^3.2.25",
     "graphql": "^15.5.0",
-    "graphql-scalars": "^1.7.0"
+    "graphql-scalars": "^1.7.0",
+    "tasksfile": "^5.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@graphql-eslint/eslint-plugin": "^0.8.0",
+    "dotenv": "^8.2.0",
     "eslint": "^7.20.0",
     "nodemon": "^2.0.7",
-    "prisma": "^2.16.1",
-    "tasksfile": "^5.1.1"
+    "prisma": "^2.16.1"
   }
 }
